# metamatic

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sst-env.d.ts  sst.config.ts
apps/agents/strava/: .env.example  pyproject.toml
apps/agents/strava/src/: strava_agent.py
apps/agents/strava/src/clients/: __init__.py  strava_client.py
apps/agents/strava/src/models/: __init__.py  strava_models.py
apps/api/: .env.example  README.md  package.json  pnpm-lock.yaml.old  tsconfig.json
apps/api/src/handlers/: auth.ts  strava.ts  user.ts  webhooks.ts
apps/web/: .env.dev  .env.example  .env.local.example  middleware.ts  package.json
apps/web/src/: auth.ts
apps/web/src/app/: page.tsx
apps/web/src/app/api/auth/signout/: route.ts
apps/web/src/app/api/onboarding/: route.ts
apps/web/src/app/dashboard/: VoiceSettings.tsx  page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/app/onboarding/success/: page.tsx
apps/web/src/lib/: apiClient.ts  phoneUtils.ts  voiceConfig.ts
apps/web/src/types/: next-auth.d.ts
infra/sst/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
infra/sst/stacks/: ApiStack.ts
infra/tools/http_testing/: README.md  interactive_client.js  metamatic_tests.http  test_agent.sh  test_chat.js  test_client.py  test_new_activity.js  test_privacy_update.js  test_rename_activity.js  test_suite.js
